tests/error/app.mml
let f x y = x y in f 3 3
